--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "Automated lead identifying machine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon",
+    "start": "node index.js"
   },
   "author": "Teodoro Systems LLC",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "pg": "^8.11.1",
     "twilio": "^4.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
