--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
+    "knex-types": "^0.5.0",
     "pg": "^8.11.1",
     "twilio": "^4.12.0"
   },
