--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
     "knex-types": "^0.5.0",
+    "morgan": "^1.10.0",
     "pg": "^8.11.1",
     "twilio": "^4.12.0"
   },
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
     "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.1",
