--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   "author": "Teodoro Systems LLC",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
     "knex-types": "^0.5.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "twilio": "^4.12.0"
   },
