--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "l34ds",
+  "name": "echodial-api",
   "version": "1.0.0",
-  "description": "Automated lead identifying machine",
+  "description": "EchoDial API built using Node.js and Express",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
@@ -14,6 +14,7 @@
   "author": "Teodoro Systems LLC",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.425.0",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
