--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "fast-csv": "^4.3.6",
     "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
@@ -29,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
+    "stripe": "^14.3.0",
     "twilio": "^4.12.0"
   },
   "devDependencies": {
